<resources>
    <string name="app_name">H2BOT</string>
    <string name="my_app_name">H2BOT</string>
    <string name="title_activity_water_station_document">WaterStationDocumentActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="email_address">Email Address</string>
    <string name="sign_up">Sign Up</string>
    <string name="contact_number">Contact Number</string>
    <string name="address">Address</string>
    <string name="age">Age</string>
    <string name="middle_name">Middle Name</string>
    <string name="last_name">Last Name</string>
    <string name="first_name">First Name</string>
    <string name="customer">Customer</string>
    <string name="create_account">Create Account</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string-array name="UserType">
        <item>Customer</item>
        <item>Station Owner</item>
        <item>Water Dealer</item>
        <item>Third Party Affiliate</item>
    </string-array>
    <string name="title_activity_google_map">Map</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="navigation_wsdrawer_open">Open navigation drawer</string>
    <string name="navigation_wsdrawer_close">Close navigation drawer</string>
    <string name="navigation_dmdrawer_open">Open navigation drawer</string>
    <string name="navigation_dmdrawer_close">Close navigation drawer</string>
    <string name="title_activity_wsaccount_settings_update_doc">WSAccountSettingsUpdateDoc</string>
    <string name="title_activity_wsaccount_settings_update_acc">WSAccountSettingsUpdateAcc</string>
    <string name="title_activity_map_direct">MapDirectionAct</string>
    <string name="title_activity_map_merchant_fragment">Map</string>

</resources>
