<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:textColor="#0B88FF"
        android:text="@string/create_account"
        android:textSize="25sp" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:padding="5dp"
        android:orientation="vertical"
        android:layout_marginLeft="38dp"
        android:layout_marginTop="40dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/RegisterPhoto"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    app:srcCompat="@mipmap/ic_launcher" />

                <Button
                    android:id="@+id/addPhotoRegister"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="50dp"
                    android:layout_marginTop="20dp"
                    android:text="Upload Photo" />

            </LinearLayout>

            <Spinner
                android:id="@+id/RegisterSpinner"
                android:layout_width="300dp"
                android:layout_height="50dp"
                android:layout_weight="1"
                android:entries="@array/UserType">

            </Spinner>
            <EditText
                android:id="@+id/RegisterFullName"
                android:layout_width="300dp"
                android:layout_height="50dp"
                android:inputType="text"
                android:hint="Full Name" />
            <EditText
                android:id="@+id/RegisterAge"
                android:layout_width="300dp"
                android:layout_height="50dp"
                android:hint="@string/age"
                android:inputType="number"/>
            <EditText
                android:id="@+id/RegisterAddress"
                android:layout_width="300dp"
                android:layout_height="50dp"
                android:hint="Full Address"/>
            <EditText
                android:id="@+id/RegisterContact"
                android:layout_width="300dp"
                android:layout_height="50dp"
                android:hint="@string/contact_number"/>
            <EditText
                android:id="@+id/RegisterEmailAddress"
                android:layout_width="300dp"
                android:layout_height="50dp"
                android:inputType="textEmailAddress"
                android:hint="@string/email_address"/>
            <EditText
                android:id="@+id/RegisterPassword"
                android:layout_width="300dp"
                android:layout_height="50dp"
                android:inputType="textPassword"
                android:hint="Password"/>
        </LinearLayout>

        <Button
            android:id="@+id/RegisterSignUp"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:layout_marginTop="10dp"
            android:background="#0B88FF"
            android:text="@string/sign_up"
            android:textColor="#FFF" />
    </LinearLayout>

    <ProgressBar
        android:id="@+id/progressBar1"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="506dp"
        android:layout_marginEnd="169dp" />

</RelativeLayout>