<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="320dp"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:orientation="vertical"
    android:padding="5dp">

    <EditText
        android:id="@+id/RegisterFullName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Full Name"
        android:inputType="text" />

    <EditText
        android:id="@+id/RegisterAge"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/age"
        android:inputType="number" />

    <EditText
        android:id="@+id/RegisterAddress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Address" />

    <EditText
        android:id="@+id/RegisterContact"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/contact_number" />

    <EditText
        android:id="@+id/RegisterEmailAddress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/email_address"
        android:inputType="textEmailAddress" />

    <EditText
        android:id="@+id/RegisterPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Password"
        android:inputType="textPassword" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/saveChangesBtn"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:background="#0097e6"
            android:padding="10dp"
            android:text="Save"
            android:textAllCaps="false"
            android:textColor="#f5f6fa"
            android:textSize="15sp" />

        <Button
            android:id="@+id/cancelBtn"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:background="#0097e6"
            android:padding="10dp"
            android:text="Cancel"
            android:textAllCaps="false"
            android:textColor="#f5f6fa"
            android:textSize="15sp" />
    </LinearLayout>

</LinearLayout>